tests/error/type_errors/unpack_not_enough.err
Guppy compilation failed. Error in file $FILE:6

4:    @guppy(compile=True)
5:    def foo() -> int:
6:        a, b, c = 1, True
          ^^^^^^^^^^^^^^^^^
GuppyTypeError: Not enough values to unpack (expected 3, got 2)
